# whyreboot

./: AGENTS.md  Cargo.toml  HANDOFF.md  HowItWorks.md  LICENSE-APACHE  LICENSE-MIT  README.md  TODO.md
.github/workflows/: release.yml
gui/: Cargo.toml
gui/src/: app.rs  detail.rs  main.rs  panels.rs  state.rs  win32.rs
src/: analysis.rs  color.rs  detect.rs  display.rs  events.rs  format.rs  jsonlog.rs  lib.rs  linux.rs  macos.rs  main.rs  oom.rs  registry.rs  timestamp.rs  timewindow.rs  types.rs  xml.rs
tests/: oom_e2e.rs
tests/fixtures/: gpu.jsonl  macos.jsonl  mixed.jsonl  oom.jsonl
