[workspace]
members = ["gui"]

[package]
name = "whyreboot"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[lib]
name = "whyreboot"
path = "src/lib.rs"

[[bin]]
name = "whyreboot"
path = "src/main.rs"

[dependencies]
windows = { version = "0.62.2", features = [
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
    "Win32_System_EventLog",
    "Win32_System_Console",
    "Win32_System_Registry",
    "Win32_System_Time",
] }

[profile.release]
opt-level   = "z"
lto         = true
codegen-units = 1
strip       = true
panic       = "abort"

