[workspace]
members = ["gui"]
# The GUI is Windows-only (Win32). A bare `cargo build`/`cargo test` builds just
# the core crate so the workspace is usable on Linux; the Windows release job
# builds everything explicitly with `--workspace`.
default-members = ["."]

[package]
name = "whyreboot"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[lib]
name = "whyreboot"
path = "src/lib.rs"

[[bin]]
name = "whyreboot"
path = "src/main.rs"

[dependencies]

# Windows backend: Event Log, registry, console VTP, FILETIME conversion.
[target.'cfg(windows)'.dependencies]
windows = { version = "0.62.2", features = [
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
    "Win32_System_EventLog",
    "Win32_System_Console",
    "Win32_System_Registry",
    "Win32_System_Time",
] }

# Unix backend: localtime_r for local-time formatting and isatty for color detection.
[target.'cfg(unix)'.dependencies]
libc = "0.2"

[profile.release]
opt-level   = "z"
lto         = true
codegen-units = 1
strip       = true
panic       = "abort"

