[package]
name = "whyreboot-gui"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[dependencies]
whyreboot = { path = ".." }
windows = { version = "0.62.2", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
    "Win32_UI_Controls",
    "Win32_UI_WindowsAndMessaging",
] }

